--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <!-- Ajout des scripts pour HLS et SRS -->
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flv.js@latest"></script>
 </head>
 
 <body>
